tests/baselines/reference/minimal_nonRelative.errors.txt
/main.ts(1,16): error TS2307: Cannot find module 'foo' or its corresponding type declarations.
/main.ts(2,16): error TS2307: Cannot find module 'bar' or its corresponding type declarations.


==== /node_modules/@types/foo/index.d.ts (0 errors) ====
    export {};
    
==== /node_modules/bar/index.d.ts (0 errors) ====
    export {};
    
==== /main.ts (2 errors) ====
    import {} from "foo";
                   ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    import {} from "bar";
                   ~~~~~
!!! error TS2307: Cannot find module 'bar' or its corresponding type declarations.
    